# bulkhead

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  deny.toml
.githooks/: pre-commit
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml
docs/: README.md  clone-mode.md
docs/examples/: clone-mode-workflows.md
scripts/: verify.sh
src/: cli.rs  config.rs  devcontainer.rs  docker.rs  lib.rs  main.rs  prompt.rs  system.rs
src/commands/: clone.rs  doctor.rs  git_config.rs  mod.rs  mount.rs  workspace.rs
templates/: Dockerfile  bulkhead-audit.toml  bulkhead-minimal.toml  bulkhead-post-create.sh  bulkhead.toml
