[package]
name = "bulkhead"
version = "0.1.1"
edition = "2024"
rust-version = "1.85"
authors = ["Peter Membrey <peter@membrey.hk>"]
description = "Hardened devcontainer CLI for local agent work"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/pmembrey/bulkhead"
keywords = ["devcontainer", "sandbox", "security", "container", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "bulkhead"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
toml_edit = "0.25"
